--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "@types/node": "12.12.5",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
-    "@types/react-rte": "^0.16.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-rte": "^0.16.1",
+    "react-draggable": "^4.1.0",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
